style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');

body{
    font-family: 'Lato', sans-serif;
    margin: 0; 
    padding: 0;
    background-color: white;
}

a{
    text-decoration: none;
}

nav{
    width: 100%;
    background-image: linear-gradient(to top,  rgb(91, 135, 230), #5B86E5);
    overflow: hidden;
}

.topNavSection{
    background-image: linear-gradient(to top,  rgb(91, 135, 230), #5B86E5);
}

nav li:first-child{
    padding-top: 1em;
}
ul{
    list-style-type: none;
    padding: 0; 
    margin: 0;
}

nav ul a{
    text-decoration: none;
    color: rgb(231, 229, 229);
}

ul li{
    padding-bottom: 0.5em;
    font-size: 1.2em;
}



.hamburger div{
    width: 30px;
    height: 2px;
    margin-bottom: 10px;
    background: white;
}

.hamburger{
    padding-right: 1em;
    padding-top: 1em;
    position: absolute;
}




.topNavSection{
    display: flex;
    justify-content: flex-end;
}
nav{
    height: 0px;
}











header{
    text-align: center;
}

.container{
    padding: 1em;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.moreProjects{
    display: flex;
    justify-content: center;
    padding-top: 1em;
    max-width: 300px;
    text-decoration: underline;
}

.moreProjects a{
    color: rgb(11, 117, 187);
}

.moreProjects a:hover{
    color: #33AEFF;
}

.banner{
    padding-top: 2em;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    background-image: linear-gradient(to top, #36D1DC, rgb(91, 135, 230));
    color:white;
}
.banner img{
    border-radius: 50%;
    border: 1px solid white;
}

.banner h2, h1{
    font-weight: 400;
    margin: 0;
}

.banner h2{
    margin-top: 1em;;
    margin-bottom: 0.5em;
    font-size: 1.6em;
}

.banner h1{
    margin-bottom: 1em;
    font-size: 1em;
}

#resumeNavigation{ 
    margin-top: 1em;
   margin-bottom: 4em;
   text-transform: uppercase;
   font-weight: bold;
   background-color: white;
   border: 1px solid white;
   color: #44B7E0;
}

.projectSection{
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 1000px;
}
.project{
    margin-top: 1em;
    margin-bottom: 1em;
    width: 100%;
    text-align: center;
    font-size: 35px;
    font-weight: 900;
    text-transform: uppercase;
    color: #43B6E0;
} 

.projectCard{
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    background-color: white;
    margin-top: 1em;
    margin-bottom: 1em;
    max-width: 300px;
    height: 510px;
    position: relative;
}

#discountImage{
    padding-top: 0.9em;
    width: 110px;
    padding-bottom: 15px;
}

.projectCard p{
    opacity: 0.7;
    font-size: 0.9em;
}

.projectCard img{
    width: 100%;
}


.projectVid{
    display: block;
    width: 100%;
}
.projectCardContent{
    padding: 1em;

}

.projectCardContent p{
    line-height: 1.5em;

}
.projectCardTitle{
    text-align: center;
    color: #2492da;
    margin-bottom: 0;

}

.cardFooter{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 0;
    position: absolute;
    bottom: 1em;
    left: 1em;
    right: 1em;
    height: 50px;
}


.viewProjectLink{
    font-size: 1em;

}


.viewProjectLink, .viewResume{
    background-color: #33aeff;
    border: none; 
    color: white;
    padding: 0.9em;
    border-radius: 5px;
    font-size: 0.9em;
}

#resumeNavigation:hover{
    background-color: #44B7E0;
    color: white;
    background-image: linear-gradient(to top,  #3CC5DD , #40BEDF);
}






.viewProjectLink:hover, .btnContainer button:hover{
    background-color: #56b8fa;
}


.cardIconContainer img{
    margin: 0;
    padding: 0;
    width: 100%;
}
.cardIconContainer{
    width: 80px;
}


.emailFormSection{
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: white;
    padding: 1em;
    margin: 0;
    margin-top: 3em;
    margin-bottom: 3em;
}

.emailFormSection h1{
    text-align: center;
    margin-bottom: 1.5em;
    font-weight: bold;
    color: #2492DA;
    font-size: 2em;
    margin-top: 1em;
    width: 280px;
}


.emailInputContainer{
    padding-bottom: 1.5em;
    padding-right: 1em;
    display: flex;
    flex-direction: column;
}

.centerForm{
    display: flex;
    flex-direction: column;
    align-items: center;
}

label{

    margin-bottom: 0.5em;
    font-size: 14px;
    color: #4387ca;
    font-weight: bold;
}

.emailAlignContainer{
   
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1em;
    justify-content: center;
}

.emailInputContainer input{

    border: 1px solid rgb(214, 214, 214);
    border-radius: 5px;
    margin-bottom: 1em;

    
}

.nameInput{
    width: 150px;
}

.nameInput, .emailInput, .subjectInput{
    border: none;
    padding: 0.5em
}

.emailInput, .subjectInput{
    width: 200px;
}

.emailMsgContainer textarea{
    margin-top: 0.5em;
    border: none;
    border: 1px solid rgb(214, 214, 214);

    display: block;
    height: 100px;
    width: 200px;
    
}


.btnContainer{
    display: flex;
    padding: 1em;
    justify-content: flex-end;
}

.btnContainer button{
    padding: 1em;
    margin-top: 1em;
    width: 100px;
    background: #33AEFF;
    border: none;
    color: white;
    border-radius: 5px;
}

footer{
    width: 100%;
    height: 100px;

    background: #4DD5FE;

}

footer div{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 100%;
    /* position: absolute; */
}
.goBack{
    width: 50px;
    height: 50px;
    border: 1px solid white;
    margin-right: 2em;
    border-radius: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: move 1s linear infinite;
    position: relative;
}

.goBack:hover{
    background-color: white;
}

.goBack a{
    color: white;
    font-size: 2em;
    padding-bottom: 0;
    height: 30px;
}

.goBack:hover > a{
    color: #4DD5FE;
}

@keyframes move {

    0%{top:0px;}
    50%{top: 10px;}
    100%{top: 0px;}
  }

@media only screen and (min-width: 700px)
{
    .moreProjects{
        width: 100%;
    }
    .projectCardContent p{
        line-height: 1.6em;
    
    }

    .banner a{
        padding: 1em;
        text-align: center;
        /* transition: all 0.2s linear; */
        width: 100px;
    }
    
    /* .banner a:hover{
        width: 110px;
    } */




    .hamburger{
        display: none;
    }
    nav{
        padding: 0;
        padding-top: 2em;
        display: flex;
        justify-content: flex-end;
        
        /* when clicking the hamburger icon and then changing the screen size 
        the 60px was not getting applied, instead it countinued to have the 
        height that was set in js. this fixes it, also ads a nice animation... */
        height: 60px !important; 
    }


    li{
        display: inline;
        padding-right: 1.5em;
    }

    ul{
         margin: 0;
    }

    a{
        text-decoration: none;
        font-size: 1.2em;
    }

    nav a:hover{
        color: white;
    }
    
 



    .projectSection{
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;

   }

   .nameInput{
       width: 200px;
   }

   .emailFormSection{
       width: 500px;

   }
   .emailFormSection form{
       width: 100%;
   }

    .emailInput, .subjectInput{
        width: 300px;
    }

    .emailMsgContainer textarea{
        margin-top: 0.5em;
        display: block;
        width: 300px;
        
    }


   .projectCard{
       margin-right: 1em;
   }
}

    

@media only screen and (min-width: 1150px)
{
    .moreProjects{
        max-width: 900px;
        width: 100%;
        justify-content: flex-end;
    }
}

